force-app/main/default/objects/Opportunity_Line_Item__c/Opportunity_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Application line items are used in the DLL on Demand partner portal to represent assets and fees tracked during the credit application process. The standard object was not used as products and price books aren&apos;t used in the DoD portal currently.</description>
    <label>Opportunity Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>