force-app/main/default/objects/Opportunity_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The dollar value of the current line item knowing that it will always represent a quantity of one. However not all amounts will roll-up to the total application amount value as some will be pass-through charges.</description>
    <inlineHelpText>The dollar value of the current line item knowing that it will always represent a quantity of one. However not all amounts will roll-up to the total application amount value as some will be pass-through charges.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>