force-app/main/default/objects/Opportunity_Line_Item__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The external Id used to match this specific asset record to the specific asset in MOSAIC. The Id value comes from the MOSAIC integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The external Id used to match this specific asset record to the specific asset in MOSAIC. The Id value comes from the MOSAIC integration.</inlineHelpText>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>