force-app/main/default/objects/Opportunity_Line_Item__c/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The type of line item used to indicate what the item is for and how to use it in calculations.</description>
    <inlineHelpText>The type of line item used to indicate what the item is for and how to use it in calculations.</inlineHelpText>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>