force-app/main/default/objects/Opportunity_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The parent opportunity that the line item is for.</description>
    <inlineHelpText>The parent opportunity that the line item is for.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Application_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>