force-app/main/default/objects/Opportunity_Line_Item__c/fields/Planned_Install_City__c.field-meta.xml
<CustomField>
    <fullName>Planned_Install_City__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The city the asset is expected to be delivered to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The city the asset is expected to be delivered to.</inlineHelpText>
    <label>Planned Install City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>