force-app/main/default/objects/Opportunity_Line_Item__c/fields/Planned_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Install_Date__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The date the asset is anticipated to be delivered to the customer&apos;s planned install address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the asset is anticipated to be delivered to the customer&apos;s planned install address.</inlineHelpText>
    <label>Planned Install Date</label>
    <type>Date</type>
</CustomField>