force-app/main/default/objects/Opportunity_Line_Item__c/fields/Planned_Install_State__c.field-meta.xml
<CustomField>
    <fullName>Planned_Install_State__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The state the asset is expected to be delivered to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state the asset is expected to be delivered to.</inlineHelpText>
    <label>Planned Install State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>