force-app/main/default/objects/Opportunity_Line_Item__c/fields/Planned_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>Planned_ZIP_Code__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The postal/zip code the asset is expected to be delivered to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The postal/zip code the asset is expected to be delivered to.</inlineHelpText>
    <label>Planned ZIP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>