force-app/main/default/objects/Opportunity_Line_Item__c/fields/Related_App_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_App_Line_Item__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accessories or fees, for example, may be related back to a specific application line item.</description>
    <inlineHelpText>Accessories or fees, for example, may be related back to a specific application line item.</inlineHelpText>
    <label>Related App Line Item</label>
    <referenceTo>Opportunity_Line_Item__c</referenceTo>
    <relationshipName>Related_Application_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>