force-app/main/default/objects/Opportunity_Line_Item__c/fields/Related_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Related_Quote_Line__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the line item was created from a quote, this links to the original quote line item. A series of unique opportunity line items may point to the same quote line item if the quote line item had a quantity greater than one.</description>
    <inlineHelpText>If the line item was created from a quote, this links to the original quote line item. A series of unique opportunity line items may point to the same quote line item if the quote line item had a quantity greater than one.</inlineHelpText>
    <label>Related Quote Line</label>
    <referenceTo>Quote_Line__c</referenceTo>
    <relationshipName>Application_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>