force-app/main/default/objects/Opportunity_Line_Item__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>The serial number of the unique asset. Set as an external Id to support serial number search in the global search.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The serial number of the unique asset. Set as an external Id to support serial number search in the global search.</inlineHelpText>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>