force-app/main/default/objects/Opportunity_Line_Item__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates if the given asset is tax exempt.</description>
    <inlineHelpText>Indicates if the given asset is tax exempt.</inlineHelpText>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>